--- a/index.html
+++ b/index.html
@@ -1,105 +1,82 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fundo Verde Metálico + Download</title>
-
-  <!-- html2canvas -->
-  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" defer></script>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      gap: 16px;
-      background: #111;
-      padding: 24px;
-      min-height: 100vh;
-    }
-
-    button {
-      cursor: pointer;
-      border: 0;
-      border-radius: 10px;
-      padding: 10px 16px;
-      background: #1f8a3a;
-      color: #fff;
-      font-weight: 600;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.25);
-    }
-
-    .page-background {
-      width: 210mm;
-      height: 297mm;
-      /* juntamos tudo em um único background */
-      background: 
-        linear-gradient(45deg, rgba(255, 255, 255, 0.1) 0%,
-          rgba(255, 255, 255, 0.05) 25%,
-          rgba(0, 0, 0, 0.05) 50%,
-          rgba(255, 255, 255, 0.08) 75%,
-          rgba(255, 255, 255, 0.12) 100%),
-        conic-gradient(from 0deg at center,
-          #90ee90 0deg,
-          #6b8e23 60deg,
-          #4a7c59 120deg,
-          #2d5016 180deg,
-          #1a3d0a 240deg,
-          #8fbc8f 300deg,
-          #90ee90 360deg);
-      background-blend-mode: overlay;
-      box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
-    }
-
-    @media screen and (max-width: 1200px) {
-      .page-background {
-        width: 100vw;
-        height: calc(100vw * (297 / 210));
-        max-width: 210mm;
-        max-height: 297mm;
-      }
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Swift September</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css" />
+  <meta name="description" content="Swift September: 30 Days, 30 iOS Lessons. One focused tip per day to sharpen your Swift and iOS skills." />
 </head>
 <body>
-  <button id="downloadJpegBtn">Baixar JPEG</button>
-  <div id="target" class="page-background"></div>
+  <header class="header">
+    <div class="container header-inner">
+      <a class="brand" href="./index.html" aria-label="Go to home">
+        <div>
+          <div class="brand-title">Swift September</div>
+          <div class="brand-subtitle">30 Days, 30 iOS Lessons</div>
+        </div>
+      </a>
+      <!-- Skip to lessons button removido -->
+    </div>
+  </header>
 
-  <script>
-    window.addEventListener('load', function () {
-      const btn = document.getElementById('downloadJpegBtn');
-      const target = document.getElementById('target');
+  <main class="container">
+    <section class="hero">
+      <div class="hero-text">
+        <h1>One lesson a day. A stronger iOS dev in 30.</h1>
+        <p>
+          Throughout September, I’ll share one practical iOS/Swift lesson per day:
+          short, focused, and meant to help you level up with steady momentum.
+          From language fundamentals and Swift Concurrency to testing, CI/CD, and shipping with confidence,
+          you’ll get the essentials and the nuances that matter in real projects.
+        </p>
+      </div>
+      <div class="hero-visual">
+        <div class="book" aria-hidden="true"></div>
+      </div>
+    </section>
 
-      async function downloadAsJPEG() {
-        const canvas = await html2canvas(target, {
-          backgroundColor: null,
-          scale: 1,
-          useCORS: true
-        });
+    <section id="days" class="carousel-wrap" aria-label="Lessons">
+      <div class="carousel-header">
+        <h2>All 30 days</h2>
+        <div class="carousel-controls">
+          <button class="icon-btn" type="button" title="Previous" aria-label="Previous" data-carousel-prev>
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+              <path d="M15 19l-7-7 7-7" stroke="white" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </button>
+          <button class="icon-btn" type="button" title="Next" aria-label="Next" data-carousel-next>
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+              <path d="M9 5l7 7-7 7" stroke="white" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="carousel" data-carousel-track></div>
+    </section>
 
-        const outCanvas = document.createElement('canvas');
-        outCanvas.width = canvas.width;
-        outCanvas.height = canvas.height;
-        const ctx = outCanvas.getContext('2d');
+    <footer class="footer">
+      <div class="footer-grid">
+        <div>
+          <h3>About</h3>
+          <p>Created by John Doe, iOS Engineer and educator. Sharing daily lessons to help you grow with clarity and consistency.</p>
+        </div>
+        <div>
+          <h3>Connect</h3>
+          <ul>
+            <li><a href="#" rel="noopener">Twitter</a></li>
+            <li><a href="#" rel="noopener">LinkedIn</a></li>
+            <li><a href="#" rel="noopener">GitHub</a></li>
+            <li><a href="#" rel="noopener">Email</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </main>
 
-        ctx.fillStyle = '#ffffff'; // fundo branco
-        ctx.fillRect(0, 0, outCanvas.width, outCanvas.height);
-        ctx.drawImage(canvas, 0, 0);
-
-        const dataURL = outCanvas.toDataURL('image/jpeg', 0.95);
-        const a = document.createElement('a');
-        a.href = dataURL;
-        a.download = 'retangulo-verde.jpg';
-        document.body.appendChild(a);
-        a.click();
-        a.remove();
-      }
-
-      btn.addEventListener('click', downloadAsJPEG);
-    });
-  </script>
+  <script src="./main.js" defer></script>
 </body>
 </html>
