--- a/index.html
+++ b/index.html
@@ -59,22 +59,49 @@
     </section>
 
     <footer class="footer">
-      <div class="footer-grid">
-        <div>
-          <h3>About</h3>
-          <p>Created by John Doe, iOS Engineer and educator. Sharing daily lessons to help you grow with clarity and consistency.</p>
-        </div>
-        <div>
-          <h3>Connect</h3>
-          <ul>
-            <li><a href="#" rel="noopener">Twitter</a></li>
-            <li><a href="#" rel="noopener">LinkedIn</a></li>
-            <li><a href="#" rel="noopener">GitHub</a></li>
-            <li><a href="#" rel="noopener">Email</a></li>
-          </ul>
-        </div>
+  <div class="footer-grid">
+    <div class="about-wrap">
+      <img
+        src="./images/profilePic.png"
+        alt="Profile picture"
+        class="about-avatar"
+        width="80"
+        height="80"
+        loading="lazy"
+      />
+      <div class="about-text">
+        <h3>Matheus Zanivan Andrade | iOS Engineer </h3>
+        <p>Sharing daily lessons to help you grow with clarity and consistency.</p>
       </div>
-    </footer>
+    </div>
+
+    <div class="connect-wrap">
+      <h3>Connect</h3>
+      <ul class="social-list">
+        <li>
+          <a href="https://www.linkedin.com/in/matheuszanivan/" rel="noopener" target="_blank">
+            LinkedIn
+            <img src="./images/linkedinLogo.svg" alt="" class="social-icon" width="18" height="18" />
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/MatheusZanivan" rel="noopener" target="_blank">
+            GitHub
+            <img src="./images/githubLogo.svg" alt="" class="social-icon" width="18" height="18" />
+          </a>
+        </li>
+        <li>
+          <a href="mailto:zanivanandrade@gmail.com" rel="noopener">
+            Email
+            <img src="./images/gmailLogo.svg" alt="" class="social-icon" width="18" height="18" />
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</footer>
+
+
   </main>
 
   <script src="./main.js" defer></script>
