fix: sites references

--- a/day1.html
+++ b/day1.html
@@ -223,7 +223,7 @@ d.value = 42       // c.value is now 42 as well</code></pre>
 let filtered = doubled.filter { \$0 > 2 } // \[4, 6]</code></pre>
         </div>
         <p>Reference: <a href="https://docs.swift.org/swift-book/documentation/the-swift-programming-language/closures/"
-            target="_blank" rel="noopener">Closures — Swift Book</a>.</p>
+            target="_blank" rel="noopener">Closures — The Swift Programming Language</a>.</p>
       </section>
 
 
@@ -286,7 +286,7 @@ print(doc.isTemporary) // true</code></pre>
         </div>
         <p>Deep dive: <a
             href="https://docs.swift.org/swift-book/documentation/the-swift-programming-language/protocols/"
-            target="_blank" rel="noopener">Protocols — Swift Book</a>.</p>
+            target="_blank" rel="noopener">Protocols — The Swift Programming Language</a>.</p>
       </section>
       <section class="section">
         <h2 data-title="Best practices">Best practices</h2>
@@ -322,9 +322,9 @@ print(doc.isTemporary) // true</code></pre>
               target="_blank" rel="noopener">Choosing Between Structures and Classes — Apple Docs</a>
           </li>
           <li><a href="https://docs.swift.org/swift-book/documentation/the-swift-programming-language/closures/"
-              target="_blank" rel="noopener">Closures — Swift Book</a></li>
+              target="_blank" rel="noopener">Closures — The Swift Programming Language</a></li>
           <li><a href="https://docs.swift.org/swift-book/documentation/the-swift-programming-language/protocols"
-              target="_blank" rel="noopener">Protocols — Swift Book</a></li>
+              target="_blank" rel="noopener">Protocols — The Swift Programming Language</a></li>
         </ul>
       </section>
     </div>
