--- a/day2.html
+++ b/day2.html
@@ -159,7 +159,7 @@ User(name: "Alice").printDescription()</code></pre>
           <li><a href="https://developer.apple.com/documentation/swift/optional" target="_blank"
               rel="noopener">Optionals — Apple Docs</a></li>
           <li><a href="https://docs.swift.org/swift-book/documentation/the-swift-programming-language/protocols/" target="_blank"
-              rel="noopener">Protocols — Swift Book</a></li>
+              rel="noopener">Protocols — The Swift Programming Language</a></li>
         </ul>
       </section>
     </div>
