--- a/day3.html
+++ b/day3.html
@@ -138,7 +138,7 @@ class Profile {
           <h2 data-title="Next steps">Next steps</h2>
           <p>Try creating a small sample project with a view controller and a closure property. First, reproduce a retain cycle, then fix it using a capture list. Use Xcode’s memory graph debugger to confirm that your objects are properly released. For a deeper dive, read the official Swift documentation on ARC.</p>
           <ul>
-            <li><a href="https://docs.swift.org/swift-book/documentation/the-swift-programming-language/automaticreferencecounting" target="_blank" rel="noopener">Automatic Reference Counting - Swift Book</a></li>
+            <li><a href="https://docs.swift.org/swift-book/documentation/the-swift-programming-language/automaticreferencecounting" target="_blank" rel="noopener">Automatic Reference Counting - The Swift Programming Language</a></li>
           </ul>
         </section>
       </div>
