--- a/day4.html
+++ b/day4.html
@@ -147,7 +147,7 @@ Task {
           <p>Try creating a small demo app that fetches multiple APIs in parallel with a TaskGroup, and add cancellation support when the user leaves the screen. This will help solidify your understanding of structured concurrency.</p>
           <ul>
             <li><a href="https://developer.apple.com/documentation/swift/concurrency" target="_blank" rel="noopener">Concurrency - Apple Docs</a></li>
-            <li><a href="https://docs.swift.org/swift-book/documentation/the-swift-programming-language/concurrency/" target="_blank" rel="noopener">Concurrency - Swift Book</a></li>
+            <li><a href="https://docs.swift.org/swift-book/documentation/the-swift-programming-language/concurrency/" target="_blank" rel="noopener">Concurrency - The Swift Programming Language</a></li>
           </ul>
         </section>
       </div>
