--- a/day5.html
+++ b/day5.html
@@ -134,7 +134,7 @@ func updateLabel(_ label: UILabel, text: String) {
           <h2 data-title="Next steps">Next steps</h2>
           <p>Try creating your own actor to manage a shared resource, and then annotate a function with <code>@MainActor</code> to handle UI updates. Pay attention to when you need <code>await</code> and how Swift enforces safe access rules.</p>
           <ul>
-            <li><a href="https://developer.apple.com/documentation/swift/actor" target="_blank" rel="noopener">Apple reference: Actor — Apple Docs</a></li>
+            <li><a href="https://developer.apple.com/documentation/swift/actor" target="_blank" rel="noopener">Actor — Apple Docs</a></li>
             <li><a href="https://docs.swift.org/swift-book/documentation/the-swift-programming-language/concurrency/#Actors" target="_blank" rel="noopener">Actors — The Swift Programming Language</a></li>
           </ul>
         </section>
